For VC++ 2005 added missing UAC manifest part. Remove after updating to VC++ 2008+
git-svn-id: https://ddverpatch.svn.codeplex.com/svn/trunk@21698 555e8bc2-ad3d-4a22-a156-a42dcab9bd6f

--- a/verpatch.vcproj
+++ b/verpatch.vcproj
@@ -72,6 +72,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="manif-vs2005.txt"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -154,6 +155,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="manif-vs2005.txt"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
