Uprgaded the project  to VC++ 2008 (express); VC++ 2005 compat note removed from readme. Removed CP license note for Codeplex.
git-svn-id: https://ddverpatch.svn.codeplex.com/svn/trunk@21701 555e8bc2-ad3d-4a22-a156-a42dcab9bd6f

--- a/verpatch.vcproj
+++ b/verpatch.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="verpatch"
 	ProjectGUID="{E08F11BD-35BC-4496-82BB-1CFD56BB044C}"
 	RootNamespace="relstamp"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -44,7 +45,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -65,6 +66,8 @@
 				SubSystem="1"
 				LargeAddressAware="1"
 				TerminalServerAware="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -72,7 +75,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="manif-vs2005.txt"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -85,9 +87,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -125,7 +124,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_A_NOISE_DBG=0"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -148,6 +147,8 @@
 				TerminalServerAware="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -155,7 +156,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="manif-vs2005.txt"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -168,9 +168,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
